CWF Add reservoir Management with warning/urgent Colors

--- a/wear/src/main/res/layout/activity_custom.xml
+++ b/wear/src/main/res/layout/activity_custom.xml
@@ -180,6 +180,19 @@
         tools:text="--" />
 
     <TextView
+        android:id="@+id/reservoir_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="23px"
+        android:textStyle="bold"
+        android:visibility="gone"
+        tools:text="--" />
+
+    <TextView
         android:id="@+id/rig_battery_ext1"
         android:layout_width="0px"
         android:layout_height="0px"
@@ -373,6 +386,19 @@
 
     <TextView
         android:id="@+id/temp_target_ext2"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="23px"
+        android:textStyle="bold"
+        android:visibility="gone"
+        tools:text="--" />
+
+    <TextView
+        android:id="@+id/reservoir_ext2"
         android:layout_width="0px"
         android:layout_height="0px"
         android:layout_marginLeft="0px"
@@ -583,6 +609,18 @@
         android:visibility="gone"
         tools:text="--" />
 
+    <TextView
+        android:id="@+id/reservoir"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="23px"
+        android:textStyle="bold"
+        android:visibility="gone"
+        tools:text="--" />
 
     <TextView
         android:id="@+id/uploader_battery"
