--- a/ui/src/main/res/layout/treatments_careportal_item.xml
+++ b/ui/src/main/res/layout/treatments_careportal_item.xml
@@ -109,10 +109,11 @@
 
             <TextView
                 android:id="@+id/note"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:paddingEnd="10dp"
+                android:layout_weight="1"
                 tools:ignore="RtlSymmetry"
                 tools:text="Activity" />
 
@@ -121,7 +122,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:paddingEnd="10dp"
                 tools:ignore="RtlSymmetry"
                 tools:text="" />
