--- a/ui/src/main/res/layout/treatments_careportal_item.xml
+++ b/ui/src/main/res/layout/treatments_careportal_item.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Widget.MaterialComponents.CardView"
     android:id="@+id/careportal_card"
+    style="@style/Widget.MaterialComponents.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:layout_marginStart="4dp"
     android:layout_marginBottom="4dp"
     app:cardCornerRadius="4dp"
-    app:contentPadding="2dp"
-    android:layout_gravity="center">
+    app:contentPadding="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -78,8 +77,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
-                android:textColor="?attr/setTempButton"
                 android:text="NS"
+                android:textColor="?attr/setTempButton"
                 tools:ignore="HardcodedText" />
 
             <TextView
@@ -109,27 +108,32 @@
 
             <TextView
                 android:id="@+id/note"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:paddingEnd="10dp"
-                android:layout_weight="1"
                 tools:ignore="RtlSymmetry"
                 tools:text="Activity" />
 
             <TextView
                 android:id="@+id/bg"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:paddingEnd="10dp"
                 tools:ignore="RtlSymmetry"
-                tools:text="" />
+                tools:text="8.1" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
             <CheckBox
                 android:id="@+id/cb_remove"
                 android:layout_width="wrap_content"
                 android:layout_height="19dp"
+                android:layout_gravity="end"
                 android:contentDescription="@string/select_for_removal"
                 android:minWidth="0dp"
                 android:visibility="gone" />
