--- a/ui/src/main/res/layout/treatments_careportal_item.xml
+++ b/ui/src/main/res/layout/treatments_careportal_item.xml
@@ -92,10 +92,9 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/duration"
@@ -104,16 +103,11 @@
                 android:layout_gravity="center_vertical"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/bg"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="RtlSymmetry" />
-
-            <TextView
-                android:id="@+id/note"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:paddingEnd="10dp"
-                tools:ignore="RtlSymmetry"
-                tools:text="Activity" />
 
             <TextView
                 android:id="@+id/bg"
@@ -121,13 +115,25 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:paddingEnd="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/note"
+                app:layout_constraintStart_toEndOf="@+id/duration"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="RtlSymmetry"
                 tools:text="8.1" />
 
             <TextView
+                android:id="@+id/note"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_gravity="center_vertical"
+                android:paddingEnd="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/cb_remove"
+                app:layout_constraintStart_toEndOf="@+id/bg"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlSymmetry"
+                tools:text="Activity" />
 
             <CheckBox
                 android:id="@+id/cb_remove"
@@ -135,10 +141,13 @@
                 android:layout_height="19dp"
                 android:layout_gravity="end"
                 android:contentDescription="@string/select_for_removal"
-                android:minWidth="0dp"
-                android:visibility="gone" />
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/note"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
 
