--- a/plugins/main/src/main/res/layout/overview_buttons_layout.xml
+++ b/plugins/main/src/main/res/layout/overview_buttons_layout.xml
@@ -31,22 +31,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingStart="0dp"
-        android:paddingEnd="5dp">
+        android:paddingStart="@dimen/gray_material_button_margin_horizontal"
+        android:paddingEnd="@dimen/gray_material_button_margin_horizontal">
 
         <app.aaps.core.ui.elements.SingleClickButton
             android:id="@+id/treatment_button"
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
+            android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/icon_insulin_carbs"
             android:ellipsize="end"
             android:singleLine="true"
             android:text="@string/overview_treatment_label"
             android:textColor="?attr/icTreatmentColor"
-            android:visibility="gone"
+            android:visibility="visible"
             app:iconPadding="-4dp" />
 
         <app.aaps.core.ui.elements.SingleClickButton
@@ -54,7 +54,7 @@
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
+            android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_bolus"
             android:ellipsize="end"
@@ -68,7 +68,7 @@
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
+            android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_cp_bolus_carbs"
             android:ellipsize="end"
@@ -82,7 +82,7 @@
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
+            android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_calculator"
             android:ellipsize="end"
@@ -96,14 +96,15 @@
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
+            android:layout_marginStart="@dimen/gray_material_button_margin_horizontal"
+            android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_calibration"
             android:ellipsize="end"
             android:singleLine="true"
             android:text="@string/calibration"
             android:textColor="?attr/icCalibrationColor"
-            android:visibility="gone"
+            android:visibility="visible"
             app:iconPadding="-4dp" />
 
         <app.aaps.core.ui.elements.SingleClickButton
@@ -111,14 +112,15 @@
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
+            android:layout_marginStart="@dimen/gray_material_button_margin_horizontal"
+            android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_xdrip"
             android:ellipsize="end"
             android:singleLine="true"
             android:text="@string/overview_cgm"
             android:textColor="?attr/icCalibrationColor"
-            android:visibility="gone"
+            android:visibility="visible"
             app:iconPadding="-4dp" />
 
         <app.aaps.core.ui.elements.SingleClickButton
@@ -126,7 +128,8 @@
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
+            android:layout_marginStart="@dimen/gray_material_button_margin_horizontal"
+            android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_quick_wizard"
             android:hint="@string/quickwizard"
