--- a/ui/src/main/res/layout/dialog_loop.xml
+++ b/ui/src/main/res/layout/dialog_loop.xml
@@ -75,14 +75,14 @@
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_closed"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
-                    android:drawableTop="@drawable/ic_loop_closed"
                     android:text="@string/closedloop"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
 
                 <app.aaps.core.ui.elements.SingleClickButton
                     android:id="@+id/overview_lgsloop"
@@ -90,11 +90,11 @@
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_lgs"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
-                    android:drawableTop="@drawable/ic_loop_lgs"
                     android:text="@string/lowglucosesuspend"
                     android:visibility="gone" />
 
@@ -104,11 +104,11 @@
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_open"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
-                    android:drawableTop="@drawable/ic_loop_open"
                     android:text="@string/openloop"
                     android:visibility="gone" />
 
@@ -118,11 +118,11 @@
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_resume"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
-                    android:drawableTop="@drawable/ic_loop_resume"
                     android:text="@string/enableloop"
                     android:textSize="11sp"
                     android:visibility="gone" />
@@ -133,12 +133,13 @@
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_disabled"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
-                    android:drawableTop="@drawable/ic_loop_disabled"
-                    android:text="@string/disableloop" />
+                    android:text="@string/disableloop"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
@@ -194,11 +195,11 @@
                     style="@style/ButtonSmallFontStyle"
                     android:layout_width="0px"
                     android:layout_height="fill_parent"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_paused"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
-                    android:drawableTop="@drawable/ic_loop_paused"
                     android:text="@string/duration1h" />
 
                 <app.aaps.core.ui.elements.SingleClickButton
@@ -218,11 +219,11 @@
                     style="@style/ButtonSmallFontStyle"
                     android:layout_width="0px"
                     android:layout_height="fill_parent"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_paused"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
-                    android:drawableTop="@drawable/ic_loop_paused"
                     android:text="@string/duration3h" />
 
                 <app.aaps.core.ui.elements.SingleClickButton
@@ -230,11 +231,11 @@
                     style="@style/ButtonSmallFontStyle"
                     android:layout_width="0px"
                     android:layout_height="fill_parent"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_paused"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
-                    android:drawableTop="@drawable/ic_loop_paused"
                     android:text="@string/duration10h" />
 
             </LinearLayout>
@@ -291,11 +292,11 @@
                     style="@style/ButtonSmallFontStyle"
                     android:layout_width="0px"
                     android:layout_height="fill_parent"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_disconnected"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
-                    android:drawableTop="@drawable/ic_loop_disconnected"
                     android:text="@string/duration15m" />
 
                 <app.aaps.core.ui.elements.SingleClickButton
@@ -303,11 +304,11 @@
                     style="@style/ButtonSmallFontStyle"
                     android:layout_width="0px"
                     android:layout_height="fill_parent"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_disconnected"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
-                    android:drawableTop="@drawable/ic_loop_disconnected"
                     android:text="@string/duration30m" />
 
                 <app.aaps.core.ui.elements.SingleClickButton
@@ -315,11 +316,11 @@
                     style="@style/ButtonSmallFontStyle"
                     android:layout_width="0px"
                     android:layout_height="fill_parent"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_disconnected"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
-                    android:drawableTop="@drawable/ic_loop_disconnected"
                     android:text="@string/duration1h" />
 
                 <app.aaps.core.ui.elements.SingleClickButton
@@ -327,11 +328,11 @@
                     style="@style/ButtonSmallFontStyle"
                     android:layout_width="0px"
                     android:layout_height="fill_parent"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_disconnected"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
-                    android:drawableTop="@drawable/ic_loop_disconnected"
                     android:text="@string/duration2h" />
 
                 <app.aaps.core.ui.elements.SingleClickButton
@@ -339,11 +340,11 @@
                     style="@style/ButtonSmallFontStyle"
                     android:layout_width="0px"
                     android:layout_height="fill_parent"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginEnd="@dimen/gray_material_button_margin_horizontal"
                     android:layout_weight="0.5"
+                    android:drawableTop="@drawable/ic_loop_disconnected"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
-                    android:drawableTop="@drawable/ic_loop_disconnected"
                     android:text="@string/duration3h" />
 
             </LinearLayout>
