--- a/core/ui/src/main/res/values/attrs.xml
+++ b/core/ui/src/main/res/values/attrs.xml
@@ -89,6 +89,7 @@
     <!---BG color-->
     <attr name="bgLow" format="reference|color" />
     <attr name="highColor" format="reference|color" />
+    <attr name="veryHighColor" format="reference|color" />
     <attr name="bgInRange" format="reference|color" />
     <!---Profile Helper -->
     <attr name="helperProfileColor" format="reference|color" />
