--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -360,6 +360,7 @@
     <color name="widget_inrange">#00FF00</color>
     <color name="widget_low">#FF0000</color>
     <color name="widget_high">#FFFF00</color>
+    <color name="widget_very_high">#FF0000</color>
     <color name="widget_ribbonWarning">#f4d700</color>
     <color name="widget_ribbonTextDefault">#FFFFFF</color>
     <color name="widget_ribbonCritical">#ff0400</color>
