--- a/core/ui/src/main/res/values-night/styles.xml
+++ b/core/ui/src/main/res/values-night/styles.xml
@@ -113,6 +113,7 @@
         <!---BG color-->
         <item name="bgLow">@color/low</item>
         <item name="highColor">@color/high</item>
+        <item name="veryHighColor">@color/low</item>
         <item name="bgInRange">@color/inRange</item>
         <!---Profile Helper -->
         <item name="helperProfileColor">@color/helperProfile</item>
