ConfigBuilder: unify colors

--- a/plugins/configuration/src/main/res/layout/configbuilder_single_plugin.xml
+++ b/plugins/configuration/src/main/res/layout/configbuilder_single_plugin.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="6dp"
+        android:buttonTint="?attr/defaultTextColor"
         android:saveEnabled="false" />
 
     <CheckBox
@@ -19,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="6dp"
+        android:buttonTint="?attr/defaultTextColor"
         android:saveEnabled="false" />
 
     <LinearLayout
@@ -91,6 +93,7 @@
         android:id="@+id/plugin_visibility"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:buttonTint="?attr/defaultTextColor"
         android:saveEnabled="false" />
 
 </LinearLayout>
