--- a/plugins/insulin/src/main/res/layout/insulin_fragment.xml
+++ b/plugins/insulin/src/main/res/layout/insulin_fragment.xml
@@ -1,5 +1,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".InsulinFragment">
@@ -23,12 +24,45 @@
             android:layout_margin="10dp"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <TextView
+        <!--TextView
             android:id="@+id/dia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium" /-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:paddingTop="5dp">
+
+            <TextView
+                android:id="@+id/dia_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="10dp"
+                android:text="@string/dia"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <app.aaps.core.ui.elements.NumberPicker
+                android:id="@+id/dia"
+                android:layout_width="130dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                app:customContentDescription="@string/dia" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/hours"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        </LinearLayout>
 
         <app.aaps.core.graph.ActivityGraph
             android:id="@+id/graph"
