--- a/plugins/main/src/main/res/layout/profile_fragment.xml
+++ b/plugins/main/src/main/res/layout/profile_fragment.xml
@@ -128,7 +128,7 @@
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/dia_short" />
+                    android:text="@string/insulin_shortname" />
 
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
