--- a/plugins/insulin/src/main/res/layout/insulin_fragment.xml
+++ b/plugins/insulin/src/main/res/layout/insulin_fragment.xml
@@ -28,19 +28,69 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/name"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:paddingTop="5dp">
+
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:importantForAutofill="no"
+                android:inputType="text" />
+
+            <ImageView
+                android:id="@+id/insulin_add"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="15dp"
+                android:contentDescription="@string/a11y_add_new_insulin"
+                app:srcCompat="@drawable/ic_add" />
+
+            <ImageView
+                android:id="@+id/insulin_remove"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="15dp"
+                android:contentDescription="@string/a11y_delete_current_insulin"
+                android:scaleX="1"
+                android:scaleY="1"
+                app:srcCompat="@drawable/ic_remove" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:visibility="gone"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:hint="@string/insulin_template">
+
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                android:id="@+id/insulin_template"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <!--TextView
             android:id="@+id/dia"
@@ -50,6 +100,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium" /-->
 
         <LinearLayout
+            android:id="@+id/peak_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
@@ -127,23 +178,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:orientation="horizontal">
-
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/update_profiles"
-                style="@style/GrayButton"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="1"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:text="@string/update_profiles"
-                android:visibility="gone"
-                app:icon="@drawable/ic_local_activate"
-                app:iconTint="@color/ic_local_activate" />
 
 
             <com.google.android.material.button.MaterialButton
