--- a/core/ui/src/main/res/values/styles.xml
+++ b/core/ui/src/main/res/values/styles.xml
@@ -114,7 +114,8 @@
         <item name="cgmDexColor">@color/byodaGray</item>
         <item name="cgmXdripColor">@color/colorCalibrationButton</item>
         <!---BG color-->
-        <item name="bgLow">@color/low</item>
+        <item name="bgVeryLow">@color/low</item>
+        <item name="bgLow">@color/high</item>
         <item name="highColor">@color/high</item>
         <item name="veryHighColor">@color/low</item>
         <item name="bgInRange">@color/tempTargetConfirmation</item>
