apex: fix TBR and add pump icon to the fragmentFix TBR and add pump icon to the fragment

--- a/pump/apex/src/main/res/layout/apex_fragment.xml
+++ b/pump/apex/src/main/res/layout/apex_fragment.xml
@@ -401,4 +401,13 @@
 
     </ScrollView>
 
+    <ImageView
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:contentDescription="@string/apex_plugin_name"
+        android:paddingHorizontal="50dp"
+        android:paddingBottom="50dp"
+        android:paddingTop="25dp"
+        android:src="@drawable/ic_apex"/>
+
 </LinearLayout>
